# CorePractice

./: .gitignore  README.md
src/CorePractCpp/: CMakeLists.txt  main.cpp
src/CorePractCpp/ArrayAndString/: ArrayAndString.cpp  ArrayAndString.h
src/CorePractCpp/LinkedList/: SinglyLinkedList.cpp  SinglyLinkedList.h  SinglyNode.cpp  SinglyNode.h
src/CorePractDotNet/: CorePractDotNet.sln
src/CorePractDotNet/ArrayAndString/: ArrayAndStringSol.cs
src/CorePractDotNet/CorePractDotNet/: CorePractDotNet.csproj  Program.cs
src/CorePractDotNet/LinkedList/: SinglyLinkedList.cs  SinglyNode.cs
src/CorePractJava/src/: Main.java
src/CorePractJava/src/ArrayAndString/: ArrayAndStringSol.java
src/CorePractJava/src/LinkedList/: SinglyLinkedList.java  SinglyNode.java
src/CorePractPython/: main.py
src/CorePractPython/ArrayAndString/: arrayAndStringSol.py
src/CorePractPython/LinkedList/: linkedListSol.py
